--- a/task/task.csproj
+++ b/task/task.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Mattia_Marchesini\model\deck\deck.json">
+    <None Update="deck.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
